tests/integration/error_handling/graph_consistency/01_requirement_exists_in_two_different_docs/test.itest
RUN: %expect_exit 1 %strictdoc export %S | filecheck %s --dump-input=fail
CHECK: error: DocumentIndex: two nodes with the same UID exist in two different documents: REQ-001 in "Doc 1" and "Doc 2".
